# ai-learning-code

./: .gitattributes  .gitignore  README.ma  README.md  day1_test.py  day2_branch.py  pyproject.toml
data/: knowledge.json  sales.csv
examples/: 01_python_basics.py  02_data_analysis.py  03_rag_demo.py
fastapi_demomain/: fastapi_demomain.py
full_rag_demo/: README.md  chroma_db.py  config.py  document_loader.py  llm_service.py  main.py  main_stream.py  rag_core.py  requirements.txt  stream_rag_core.py  text.txt  vector_store.py
ollama/_demo/: llm_test.py  main.py
rag_demo/: embedding_demo.py  simple_rag.py  split_demo.py
src/ai_learning/: __init__.py  api.py  data_analysis.py  python_basics.py  rag.py
tests/: test_api.py  test_data_analysis.py  test_python_basics.py  test_rag.py
