[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-learning-code"
version = "1.0.0"
description = "Python, data analysis, FastAPI and lightweight RAG learning project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110,<1.0",
    "numpy>=1.24,<3.0",
    "pandas>=2.0,<3.0",
    "uvicorn[standard]>=0.29,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
    "ruff>=0.5,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
